# Meeting-Buddy

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  NATIVE_SHELL_PLAN.md  PROTOCOL.md  README.md  RELEASE_CHECKLIST.md  ROADMAP.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
audio-capture/: Package.swift
audio-capture/Sources/AudioCapture/: main.swift
backend/: config.py  main.py  settings.py
backend/asr/: engine.py  streaming.py  vad.py
backend/audio/: capture.py  devices.py  sck_capture.py
backend/auth/: login_server.py  oauth.py
backend/export/: renderer.py
backend/question/: extractor.py
backend/server/: _commands.py  websocket.py
backend/synthesis/: engine.py  prep.py  prompt.py
backend/transcript/: buffer.py
docs/: native-shell-plan.md  prd-v2.md  protocol.md  refactor-candidates.md  roadmap.md
examples/: README.md  ws_tail.py
git-hooks/: pre-push
ingest/: __main__.py  chunker.py  cli.py  config.py  embedder.py  pipeline.py  project_manager.py  retriever.py  store.py
ingest/parsers/: base.py  docx_parser.py  html_parser.py  markdown_parser.py  pdf_parser.py  registry.py  url_parser.py
native/MeetingBuddyHUD/: Package.swift  README.md
native/MeetingBuddyHUD/Sources/MeetingBuddyHUD/: AppTheme.swift  BackendLauncher.swift  ContentView.swift  GlobalHotkey.swift  HUDPanel.swift  HUDStatusBarView.swift  HUDToolbarView.swift  HudCommandServer.swift  MeetingBuddyHUDApp.swift  QAHistoryView.swift  SettingsLauncher.swift  SynthesisCardView.swift  TranscriptView.swift  WebSocketClient.swift  WindowDragRegion.swift
native/MeetingBuddyProtocol/: Package.swift
native/MeetingBuddyProtocol/Sources/MeetingBuddyProtocol/: LatencyTimings.swift  Models.swift
native/MeetingBuddySettings/: Package.swift
native/MeetingBuddyShell/: Package.swift  README.md
scripts/: build-release.sh  install.sh  rebuild-and-install.sh
tasks/: lessons.md  todo.md
tests/: test_chunker.py  test_export_renderer.py  test_get_status.py  test_pipeline_integration.py  test_project_manager.py  test_protocol.py  test_protocol_commands.py  test_sck_capture.py  test_synthesis_engine_cache.py  test_synthesis_fallback.py  test_websocket_errors.py
ui/: index.html  package-lock.json  package.json  settings.html
ui/src/: main.js  settings.js  style.css
ui/src-tauri/: .gitignore  Cargo.toml  Info.plist  MeetingBuddyHUD-aarch64-apple-darwin  MeetingBuddySettings-aarch64-apple-darwin  meeting-buddy-backend-aarch64-apple-darwin  tauri.conf.ci.json  tauri.conf.json
ui/src-tauri/binaries/: meeting-buddy-backend-aarch64-apple-darwin
ui/src-tauri/capabilities/: default.json
ui/src-tauri/icons/: icon.icns
ui/src-tauri/src/: lib.rs
(+17 files in other folders)
