[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "meeting-buddy"
version = "0.1.0"
description = "Local-first macOS meeting copilot with live transcription and RAG"
requires-python = ">=3.9"
dependencies = [
    "faster-whisper>=1.0.0",
    "sounddevice>=0.5.0",
    "numpy>=1.26",
    "torch>=2.0",
    "silero-vad>=5.0",
    "websockets>=13.0",
    "scipy>=1.12",
    "sentence-transformers>=2.2",
    "lancedb>=0.4",
    "pymupdf>=1.23",
    "python-docx>=1.0",
    "beautifulsoup4>=4.12",
    "markdown>=3.5",
    "openai>=1.0",
    "aiohttp>=3.9",
]

[project.scripts]
meeting-buddy = "backend.main:main"
meeting-buddy-ingest = "ingest.cli:main"

[tool.setuptools.packages.find]
include = ["backend*", "ingest*", "scripts*"]
