[package]
name = "meeting-buddy"
version = "0.1.0"
description = "Meeting Buddy Overlay"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["lib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.0", features = ["tray-icon", "macos-private-api"] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
libc = "0.2"

[target.'cfg(target_os = "macos")'.dependencies]
window-vibrancy = "0.7"

[profile.dev]
opt-level = 0
codegen-units = 256

[profile.release]
codegen-units = 16
opt-level = 2
